force-app/main/default/objects/Quote_Line_Item__c/fields/Basis_Weight__c.field-meta.xml
<CustomField>
    <fullName>Basis_Weight__c</fullName>
    <label>Basis Wgt</label>
    <length>5</length>
    <type>Text</type>
</CustomField>