force-app/main/default/objects/Quote_Line_Item__c/fields/Bid_number_Contract_number__c.field-meta.xml
<CustomField>
    <fullName>Bid_number_Contract_number__c</fullName>
    <label>Bid #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>