force-app/main/default/objects/Quote_Line_Item__c/fields/Brightness__c.field-meta.xml
<CustomField>
    <fullName>Brightness__c</fullName>
    <label>Brightness</label>
    <length>5</length>
    <type>Text</type>
</CustomField>