force-app/main/default/objects/Quote_Line_Item__c/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <defaultValue>0.36</defaultValue>
    <label>Brokerage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>