force-app/main/default/objects/Quote_Line_Item__c/fields/Coc_Required__c.field-meta.xml
<CustomField>
    <fullName>Coc_Required__c</fullName>
    <label>CoC Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>