force-app/main/default/objects/Quote_Line_Item__c/fields/Comments_Short__c.field-meta.xml
<CustomField>
    <fullName>Comments_Short__c</fullName>
    <label>Comments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>