force-app/main/default/objects/Quote_Line_Item__c/fields/Contract_Price_Cd__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_Cd__c</fullName>
    <description>This how the price is determined.</description>
    <label>Price Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>