force-app/main/default/objects/Quote_Line_Item__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <label>Core</label>
    <length>5</length>
    <type>Text</type>
</CustomField>