force-app/main/default/objects/Quote_Line_Item__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <label>Cost Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>