force-app/main/default/objects/Quote_Line_Item__c/fields/Cost_Unit_Factor__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit_Factor__c</fullName>
    <label>Cost Unit Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>