force-app/main/default/objects/Quote_Line_Item__c/fields/CostCommision__c.field-meta.xml
<CustomField>
    <fullName>CostCommision__c</fullName>
    <label>Cost$/Comish%</label>
    <length>15</length>
    <type>Text</type>
</CustomField>