force-app/main/default/objects/Quote_Line_Item__c/fields/Costing_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Costing_unit_of_measure__c</fullName>
    <label>Costing UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>