force-app/main/default/objects/Quote_Line_Item__c/fields/Cust_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Cust_Item_Code__c</fullName>
    <label>Cust Item Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>