force-app/main/default/objects/Quote_Line_Item__c/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>