force-app/main/default/objects/Quote_Line_Item__c/fields/End_User_Agreement__c.field-meta.xml
<CustomField>
    <fullName>End_User_Agreement__c</fullName>
    <label>End User Agreement #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>