force-app/main/default/objects/Quote_Line_Item__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Exchange</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>