force-app/main/default/objects/Quote_Line_Item__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <length>10</length>
    <type>Text</type>
</CustomField>