force-app/main/default/objects/Quote_Line_Item__c/fields/Future_Dev_Cost__c.field-meta.xml
<CustomField>
    <fullName>Future_Dev_Cost__c</fullName>
    <label>Future Reb Cost</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>