force-app/main/default/objects/Quote_Line_Item__c/fields/Future_Dev_Cost_Starts__c.field-meta.xml
<CustomField>
    <fullName>Future_Dev_Cost_Starts__c</fullName>
    <label>Future Reb Cost Starts</label>
    <type>Date</type>
</CustomField>