force-app/main/default/objects/Quote_Line_Item__c/fields/Grade_Name_Class__c.field-meta.xml
<CustomField>
    <fullName>Grade_Name_Class__c</fullName>
    <label>Grade Name/Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>