force-app/main/default/objects/Quote_Line_Item__c/fields/GTM_CAS__c.field-meta.xml
<CustomField>
    <fullName>GTM_CAS__c</fullName>
    <label>GTM($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>