force-app/main/default/objects/Quote_Line_Item__c/fields/GTM_percent__c.field-meta.xml
<CustomField>
    <fullName>GTM_percent__c</fullName>
    <formula>IF(Price__c != 0,
1 - ( Cost__c / Price__c ),
0
)</formula>
    <label>GTM %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>