force-app/main/default/objects/Quote_Line_Item__c/fields/Item_Origin__c.field-meta.xml
<CustomField>
    <fullName>Item_Origin__c</fullName>
    <label>Item Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Substituted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>