force-app/main/default/objects/Quote_Line_Item__c/fields/Item_Seq__c.field-meta.xml
<CustomField>
    <fullName>Item_Seq__c</fullName>
    <label>Item Seq</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>