force-app/main/default/objects/Quote_Line_Item__c/fields/Last_Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Change__c</fullName>
    <label>Last Date of Change</label>
    <type>Date</type>
</CustomField>