force-app/main/default/objects/Quote_Line_Item__c/fields/Last_Date_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_To_Order__c</fullName>
    <label>LDO</label>
    <type>Date</type>
</CustomField>