force-app/main/default/objects/Quote_Line_Item__c/fields/List_Down_Percent__c.field-meta.xml
<CustomField>
    <fullName>List_Down_Percent__c</fullName>
    <description>For the Update Pricing page</description>
    <label>List Down Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>