force-app/main/default/objects/Quote_Line_Item__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BW-2012
Identifies locked line items</description>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>