force-app/main/default/objects/Quote_Line_Item__c/fields/mfg_tolerance__c.field-meta.xml
<CustomField>
    <fullName>mfg_tolerance__c</fullName>
    <label>MFG Tol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>