force-app/main/default/objects/Quote_Line_Item__c/fields/Minimum_mfg_quantity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_mfg_quantity__c</fullName>
    <label>Minimum mfg quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>