force-app/main/default/objects/Quote_Line_Item__c/fields/Outer_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Outer_Diameter__c</fullName>
    <label>OD</label>
    <length>5</length>
    <type>Text</type>
</CustomField>