force-app/main/default/objects/Quote_Line_Item__c/fields/PCW_Content__c.field-meta.xml
<CustomField>
    <fullName>PCW_Content__c</fullName>
    <label>PCW%</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>