force-app/main/default/objects/Quote_Line_Item__c/fields/Price_Code__c.field-meta.xml
<CustomField>
    <fullName>Price_Code__c</fullName>
    <label>Price Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>