force-app/main/default/objects/Quote_Line_Item__c/fields/Price_Origin__c.field-meta.xml
<CustomField>
    <fullName>Price_Origin__c</fullName>
    <description>This is the level at which the line is priced.</description>
    <label>Price Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>SU</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>