force-app/main/default/objects/Quote_Line_Item__c/fields/Price_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Price_unit_of_measure__c</fullName>
    <label>Price/Cost UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>