force-app/main/default/objects/Quote_Line_Item__c/fields/Pricing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Start_Date__c</fullName>
    <label>Pricing Start Date</label>
    <type>Date</type>
</CustomField>