force-app/main/default/objects/Quote_Line_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>TextArea</type>
</CustomField>