force-app/main/default/objects/Quote_Line_Item__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>