force-app/main/default/objects/Quote_Line_Item__c/fields/Projected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>