force-app/main/default/objects/Quote_Line_Item__c/fields/Quantity_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Quantity_unit_of_measure__c</fullName>
    <label>Qty UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>