force-app/main/default/objects/Quote_Line_Item__c/fields/Rebate_Code_Desc__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Code_Desc__c</fullName>
    <label>Rebate Code Desc</label>
    <length>30</length>
    <type>Text</type>
</CustomField>