force-app/main/default/objects/Quote_Line_Item__c/fields/Rebate_Ends__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Ends__c</fullName>
    <label>Rebate Ends</label>
    <type>Date</type>
</CustomField>