force-app/main/default/objects/Quote_Line_Item__c/fields/Rebate_Starts__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Starts__c</fullName>
    <label>Rebate Starts</label>
    <type>Date</type>
</CustomField>