force-app/main/default/objects/Quote_Line_Item__c/fields/Recycled_Content__c.field-meta.xml
<CustomField>
    <fullName>Recycled_Content__c</fullName>
    <label>Recycled%</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>