force-app/main/default/objects/Quote_Line_Item__c/fields/Roll_Size__c.field-meta.xml
<CustomField>
    <fullName>Roll_Size__c</fullName>
    <label>Roll Size</label>
    <length>8</length>
    <type>Text</type>
</CustomField>