force-app/main/default/objects/Quote_Line_Item__c/fields/Sent_To_Zilliant_Time__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_Zilliant_Time__c</fullName>
    <label>Sent To Zilliant Time</label>
    <type>DateTime</type>
</CustomField>