force-app/main/default/objects/Quote_Line_Item__c/fields/Special_Item__c.field-meta.xml
<CustomField>
    <fullName>Special_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Item</label>
    <type>Checkbox</type>
</CustomField>