force-app/main/default/objects/Quote_Line_Item__c/fields/Start_Price__c.field-meta.xml
<CustomField>
    <fullName>Start_Price__c</fullName>
    <description>Created 12/2017 to capture Start Price as passed over from Zilliant in the GetPrice call on a Quote. To be shown on the QLI table, Additional Details, and Fetch P&amp;A table. Value always comes from Zilliant but will be overwritten in our code to = 0 if the Shipment_Method__c on the Quote is Direct.</description>
    <inlineHelpText>Start Price from Zilliant</inlineHelpText>
    <label>Start Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>