force-app/main/default/objects/Quote_Line_Item__c/fields/Stock_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Stock_Manufactured__c</fullName>
    <label>Stocked/Mfg&apos;d</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manufactured</fullName>
                <default>true</default>
                <label>Manufactured</label>
            </value>
            <value>
                <fullName>Stocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>