force-app/main/default/objects/Quote_Line_Item__c/fields/Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Price__c</fullName>
    <description>Edit 10/2017 to up the length from 4 to 6</description>
    <label>Target Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>