force-app/main/default/objects/Quote_Line_Item__c/fields/Type_Of_Quote__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Quote__c</fullName>
    <label>Type Of Quote</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Specific</fullName>
                <default>true</default>
                <label>Specific</label>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>