force-app/main/default/objects/Quote_Line_Item__c/fields/Unisource_Item__c.field-meta.xml
<CustomField>
    <fullName>Unisource_Item__c</fullName>
    <label>Unisource Item #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>