force-app/main/default/objects/Quote_Line_Item__c/fields/Updated_P_A__c.field-meta.xml
<CustomField>
    <fullName>Updated_P_A__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stamped TRUE via workflow rule for Freight and Special line items. Stamped true after Update P&amp;A has been run.</description>
    <inlineHelpText>Has Update PA been run?</inlineHelpText>
    <label>Updated P&amp;A</label>
    <type>Checkbox</type>
</CustomField>