force-app/main/default/objects/Quote_Line_Item__c/fields/Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Vendor_Lookup__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vendor_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>R00N700000024LxcEAE</relationshipName>
    <type>Lookup</type>
</CustomField>