force-app/main/default/objects/Quote_Line_Item__c/fields/Vendor_Item__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Item__c</fullName>
    <label>Vendor Item #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>