force-app/main/default/objects/Quote_Line_Item__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Name</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>R00N700000024LxxEAE</relationshipName>
    <type>Lookup</type>
</CustomField>